@@ -3488,14 +3488,14 @@ cb_validate_crt_status (cb_tree ref, cb_tree field_tree) {
 	}
 	if (CB_TREE_CATEGORY (field_tree) == CB_CATEGORY_NUMERIC) {
 		if (field->size < 4) {
-			cb_error_x (ref, _("'%s' CRT STATUS must have at least 4 digits"),
+			cb_error_x (ref, _("'%s' numeric CRT STATUS must have at least 4 digits"),
 				field->name);
 			return NULL;
 		}
 	}
-	else if (field->size != 4) {
-		cb_error_x (ref, _("'%s' CRT STATUS must be 4 characters long"),
-			field->name);
+	else if (field->size != 3 && field->size != 4) {
+		cb_error_x (ref, _("'%s' CRT STATUS must be 3 or 4 characters long"),
+				field->name);
 		return NULL;
 	}
 	return ref;
